# ucblogo-code

./: .gdb_history  .gitignore  CHANGES  DS_Store  INSTALL  Info.plist  LogoFrame.h  Makefile.am  Messages  Messages.fr  Messages.sp  PkgInfo  README  README.md  TODO  TextEditor.cpp  TextEditor.h  actions.cpp  address-sanitizer.txt  coms.c  config.cache  config.h  config.h.in  config.h.msys  config.h.osx  config.status  configure  configure-gtk  configure.ac  configure.in  configure_hand  diffs  error.c  eval.c  eval.h  evaluator.ps  files.c  foo  gdb.rc  globals.h  (+80 more)
.github/workflows/: cd.yaml  ci.yaml  ci.yml
.svn/: all-wcprops  entries
.svn/text-base/: README.svn-base  changes.txt.svn-base  config.h.in.svn-base  configure.in.svn-base  configure.svn-base  diffscript.pl.svn-base  error.c.svn-base  general-public-license.svn-base  gpl.html.svn-base  gpl_text.h.svn-base  logo.h.svn-base  logo.icns.svn-base  logologo.ico.svn-base  macterm.c.svn-base  makehelp.c.svn-base  mem.c.svn-base  nographics.h.svn-base  parse.c.svn-base  plm.svn-base  tags.svn-base  ucblogo.dsw.svn-base  ucblogo.xpm.svn-base  win32trm.h.svn-base  wrksp.c.svn-base  wxGraphics.h.svn-base  wxMain.cpp.svn-base  wxTerminal.cpp.svn-base  wxTerminal.h.svn-base  xgraphics.c.svn-base  ztcterm.c.svn-base  ztcterm.h.svn-base
.svn/tmp/: tempfile.15.tmp  tempfile.16.tmp  tempfile.2.tmp  tempfile.6.tmp  tempfile.8.tmp  tempfile.9.tmp
UCBLogo.app/Contents/: Info.plist
csls/: Makefile.am  algs  buttons  cards  compile  crypto  docsetup  doctor  dotgame  format  fsm  master  match  math  mines  multi  pascal  playfair  plot  poker  pour  pp  psort  solitaire  streams  student  tower  ttt
csls/.svn/: all-wcprops  entries
csls/CVS/: Root
debian/: .gitignore  changelog  clean  control  copyright  dirs  doc-base  docs  gbp.conf  info  install  links  manpages  postinst  prerm  rules  ucblogo.1  ucblogo.alternatives  ucblogo.desktop  ucblogo.dirs  ucblogo.postinst  ucblogo.prerm  watch
debian/patches/: 0001-configure.in-Properly-use-AC_DEFINE.patch  0001-gcc14.patch  0002-autoupdate.patch  0003-autoconf-wx-option.patch  0003-graphics.c-Use-defined-HAVE_WX-instead-of-HAVE_WX.patch  0004-logo.h-Pre-define-SIGRET-as-return-0.patch  0004-termcap_putter-type.patch  0005-clean-makehelp.patch  0009-configure-option-runstatedir.patch  0009-no-git.patch  0010-encoding.patch  documentation.patch  fix_ftbfs.patch  fix_ftbfs_lp64.patch  fix_keyp_64bit.patch  gcc14.patch  makefile_changes.patch  makefile_target.patch  reproducible_build.patch  series  strip_svn_version.patch  wx3.0.patch
debian/patches-old/: fix_ftbfs_lp64.patch  fix_keyp_64bit.patch  series  strip_svn_version.patch
debian/upstream/: metadata
docs/: Makefile.am  logo.1  makefile  ucblogo.1  ucblogo.info  ucblogo.info-1  ucblogo.info-2  ucblogo.info-3  ucblogo.info-4  ucblogo.info-5  ucblogo.texi  usermanual.aux  usermanual.cp  usermanual.cps  usermanual.dvi  usermanual.ps  usermanual.texi  usermanual.toc
docs/.svn/: all-wcprops  entries
docs/html/: usermanual.html  usermanual_1.html  usermanual_10.html  usermanual_11.html  usermanual_12.html  usermanual_13.html  usermanual_14.html  usermanual_15.html  usermanual_16.html  usermanual_17.html  usermanual_2.html  usermanual_3.html  usermanual_4.html  usermanual_5.html  usermanual_6.html  usermanual_7.html  usermanual_8.html  usermanual_9.html  usermanual_abt.html  usermanual_fot.html  usermanual_ovr.html  usermanual_toc.html
emacs/: README  check.lg  comint-logo.el  comint-logo.elc  dot.1.loops  dot.LOOPS  dot.emacs  dot.emacs1  dot.emacs2  dot.logo  edfunc.el  install-logo-mode  letrec.el  letrec.elc  logo.el  logo.elc  makefile  tutor1.lg  tutorial.lg
emacs/CVS/: Entries  Repository
emacs/docs/: ucblogo.info  ucblogo.info-1  ucblogo.info-2  ucblogo.info-3  ucblogo.info-4  ucblogo.info-5  usermanual.html  usermanual.ps  (+21 more)
helpfiles/: ALL_NAMES  HELPCONTENTS  Makefile.am  `  allowgetset  and  apply  arc  arity  array  arraytolist  ascii  ashift  background  backslashedp  beforep  bfs  bg  bitnot  bitor  bitxor  bl  buried  buriedp  bury  buryall  buryname  button  buttonact  cascade  cascaded2  case  caseignoredp  catch  clearscreen  close  combine  contents  continue  copydef  (+203 more)
helpfiles/.svn/: all-wcprops  entries
helpfiles/.svn/text-base/: ALL_NAMES.svn-base  HELPCONTENTS.svn-base  `.svn-base  allopen.svn-base  arctan.svn-base  arrayp.svn-base  background.svn-base  bitand.svn-base  bk.svn-base  butfirst.svn-base  buttonp.svn-base  char.svn-base  cleartext.svn-base  clickpos.svn-base  commandline.svn-base  cond.svn-base  cos.svn-base  count.svn-base  decreasefont.svn-base  deq.svn-base  dmacro.svn-base  dmaybeoutput.svn-base  dribble.svn-base  dsetbf.svn-base  dsetitem.svn-base  edpl.svn-base  edpls.svn-base  edps.svn-base  erase.svn-base  erasefile.svn-base  ern.svn-base  exp.svn-base  fill.svn-base  filled.svn-base  filter.svn-base  font.svn-base  fput.svn-base  fullprintp.svn-base  fullscreen.svn-base  gc.svn-base  (+76 more)
inno/: ucblogo.iss
logolib/: #  ?rest  Makefile.am  Messages  Messages.fr  Messages.sp  Messages.zh_TW  Qrest  `  arraytolist  backslashedQ  backslashedp  buryall  buryname  cascade  cascade.2  case  closeall  combine  cond  crossmap  dequeue  do.until  do.while  edall  edn  edns  edpl  edpls  edps  emacs.debug  erall  ern  erns  erpl  erpls  erps  extract  file?  fileQ  (+49 more)
logolib/.svn/: all-wcprops  entries
logolib/.svn/text-base/: Messages.svn-base  buryall.svn-base  cascade.svn-base  edns.svn-base  edpl.svn-base  edpls.svn-base  edps.svn-base  find.svn-base  ignore.svn-base  iseq.svn-base  macroexpand.svn-base  map.svn-base  mdarray.svn-base  pop.svn-base  popl.svn-base  quoted.svn-base  reduce.svn-base  reverse.svn-base  unburyall.svn-base  while.svn-base
logolib/CVS/: Repository
tests/: Makefile.am  UnitTests-Arithmetic.lg  UnitTests-Bitwise.lg  UnitTests-Constructors.lg  UnitTests-Control.lg  UnitTests-Files.lg  UnitTests-Macros.lg  UnitTests-MemMgr.lg  UnitTests-OOP.lg  UnitTests-Predicates.lg  UnitTests-Random.lg  UnitTests.lg  _how-to.txt  _suite-template.lg
(+108 files in other folders)
